<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regard1"
    android:orientation="vertical"
    tools:context="com.mingrisoft.Regard">
<TextView
    android:id="@+id/title1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title1"
    android:textSize="@dimen/title1_textSize"
   android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/title1_marginTop"
   />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
